--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </ul>
       </section>
 
-      <section class="events">
+      <section id="events" class="events">
         <div class="events__content">
           <h2 class="events__heading">Próximos eventos:</h2>
           <h3 class="events__title">
@@ -138,7 +138,7 @@
           </p>
           <a href="#" class="events__more">Más eventos &rarr;</a>
         </div>
-         <div id="events" class="events__cover">
+         <div class="events__cover">
             <img src="./images/cafe.png" alt="Cafe" class="events__image">
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
