Actualización de mi proyecto - Etapa 3 - Ajustando área de miembros

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             ¡Convertirse en miembro es muy fácil!
           </h2>
           <ul class="membership__steps">
-            <li class="step step__one">
+            <li class="step step_one">
               <h3 class="step__title">
                 Paso 1
                 <img
@@ -218,7 +218,7 @@
                 Completa el formulario de afiliación en línea o en persona.
               </p>
             </li>
-            <li class="step step__two">
+            <li class="step step_two">
               <h3 class="step__title">
                 Paso 2
                 <img
@@ -231,7 +231,7 @@
                 Ven y recoge tu credencial de la biblioteca en la recepción.
               </p>
             </li>
-            <li class="step step__three">
+            <li class="step step_three">
               <h3 class="step__title">
                 Paso 3
                 <img
@@ -242,7 +242,7 @@
               </h3>
               <p class="step__description">Firma el envés de la tarjeta.</p>
             </li>
-            <li class="step step__four">
+            <li class="step step_four">
               <h3 class="step__title">
                 Paso 4
                 <img
@@ -258,10 +258,14 @@
           </ul>
         </section>
       </main>
-      <footer id="contacts" class="footer">
-        <section class="footer__columns">
-          <div class="footer__column footer__logo">
-            <img src="./images/logo_white.svg" alt="Logotipo" />
+      <footer class="footer">
+        <section id="contacts" class="footer__columns">
+          <div class="footer__column">
+            <img
+              src="./images/logo_white.svg"
+              alt="Biblioteca Triple"
+              class="footer__logo"
+            />
           </div>
           <div class="footer__column footer__column_content_hours">
             <h2 class="footer__column-heading">Horario de apertura</h2>
@@ -300,7 +304,7 @@
             </ul>
           </div>
         </section>
-        <section class="footer__copyright">
+        <section id="copyright" class="footer__copyright">
           <p>© 2025 Patricia Higuera</p>
         </section>
       </footer>
