--- a/index.html
+++ b/index.html
@@ -304,9 +304,7 @@
             </ul>
           </div>
         </section>
-        <section id="copyright" class="footer__copyright">
-          <p>© 2025 Patricia Higuera</p>
-        </section>
+        <p id="copyright" class="footer__copyright">© 2025 Patricia Higuera</p>
       </footer>
     </div>
   </body>
