--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>
               <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
-            <li><a class="nav__link" href="#contacts">Contactos</a></li>
+            <li><a class="nav__link" href="#footer">Contactos</a></li>
           </ul>
         </nav>
         <div class="header__content">
@@ -259,7 +259,7 @@
         </section>
       </main>
       <footer class="footer">
-        <section id="contacts" class="footer__columns">
+        <section id="footer" class="footer__columns">
           <div class="footer__column">
             <img
               src="./images/logo_white.svg"
@@ -282,23 +282,21 @@
             <h2 class="footer__column-heading">Redes sociales</h2>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <a href="#" class="footer__column-link"
-                  ><span
-                    ><img
-                      src="./images/facebook_white.svg"
-                      alt="Facebook"
-                      class="footer__social-icon" /></span
-                  >Facebook</a
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />Facebook</a
                 >
               </li>
               <li class="footer__list-item">
-                <a href="#" class="footer__column-link"
-                  ><span
-                    ><img
-                      src="./images/instagram_white.svg"
-                      alt="Instagram"
-                      class="footer__social-icon" /></span
-                  >Instagram</a
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />Instagram</a
                 >
               </li>
             </ul>
